// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test RowTimeParking  render RowTimeParking 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginTop": 8,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 12,
          "lineHeight": 12,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {},
      ]
    }
    testID="LEFT_TEXT_ROW_TIME_PARKING"
  >
    left text
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "red",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 16,
          "lineHeight": 24,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {},
      ]
    }
    testID="RIGHT_TEXT_ROW_TIME_PARKING"
  >
    right text
  </Text>
</View>
`;

exports[`Test RowTimeParking  render RowTimeParking without timeLeft 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginTop": 8,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Regular",
          "fontSize": 12,
          "lineHeight": 12,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {},
      ]
    }
    testID="LEFT_TEXT_ROW_TIME_PARKING"
  >
    left text
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#595959",
          "fontFamily": "SFProDisplay-Semibold",
          "fontSize": 12,
          "lineHeight": 20,
          "textAlign": "left",
          "textDecorationLine": "none",
        },
        Object {},
      ]
    }
    testID="RIGHT_TEXT_ROW_TIME_PARKING"
  >
    right text
  </Text>
</View>
`;
